// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExplorerGrid render default 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <gui-empty-results-state>
    </gui-empty-results-state>
  </div>
</div>

`;

exports[`ExplorerGrid renders workspace with edges in 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <gui-selected-item item="[object Object]">
    </gui-selected-item>
  </div>
</div>

`;

exports[`ExplorerGrid with results 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <div class="mt-8 grid w-full max-w-8xl gap-4">
      <div class="flex items-center gap-3">
        <gui-grid-header classname="h-fit">
          Results
        </gui-grid-header>
        <gui-badge variant="default">
          2
        </gui-badge>
      </div>
      <div class="flex flex-col gap-5">
        <gui-result-item item="[object Object]">
        </gui-result-item>
        <gui-result-item item="[object Object]">
        </gui-result-item>
      </div>
    </div>
  </div>
</div>

`;

exports[`ExplorerGrid with stack 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <div class="mt-8 grid w-full max-w-8xl gap-4">
      <div class="flex items-center gap-3">
        <gui-grid-header classname="h-fit">
          Results
        </gui-grid-header>
        <gui-badge variant="default">
          2
        </gui-badge>
      </div>
      <div class="flex flex-col gap-5">
        <gui-result-item item="[object Object]">
        </gui-result-item>
        <gui-result-item item="[object Object]">
        </gui-result-item>
      </div>
    </div>
  </div>
</div>

`;
